# MedChatAi

./: .render.yaml  README.md  list_models.py  pyproject.toml  render.yaml  requirements.txt  start.sh  start_streamlit.sh
app/: main.py
app/middleware/: request_logger.py
app/models/: schemas.py
app/routers/: chat.py
app/services/: llm_client.py  prescriber.py
frontend/: streamlit_app.py
tests/: test_chat.py
