[project]
name = "medchat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.0",
    "google-ai-generativelanguage>=0.7.0",
    "google-genai>=1.41.0",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-google-genai>=2.1.12",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "sqlmodel>=0.0.25",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.37.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "httpx[http2]>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.3",
]
